--- a/railway.toml
+++ b/railway.toml
@@ -1,17 +1,22 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd api && pip install -r requirements.txt && pip install gunicorn"
+buildCommand = """
+cd api && 
+pip install -r requirements.txt && 
+pip install gunicorn torch transformers
+"""
 
 [deploy]
-startCommand = "cd api && gunicorn --bind 0.0.0.0:$PORT app:create_app()"
+startCommand = "cd api && python server.py"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 
 [phases.setup]
-nixPkgs = ["python310", "gcc"]
+nixPkgs = ["python310", "gcc", "python310Packages.pip"]
 
 [variables]
-FLASK_APP = "app.py"
+FLASK_APP = "server.py"
 FLASK_ENV = "production"
 HOST = "0.0.0.0"
+DEPLOY_ENV = "production"
