--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = """
-cd api && 
-pip install -r requirements.txt &&
-pip install gevent grpcio gunicorn pydantic-settings flask-sqlalchemy
-"""
+buildCommand = "cd api && pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cd api && python -m gunicorn -k gevent -w 4 'app:app' --bind 0.0.0.0:$PORT"
+startCommand = "cd api && python app.py"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
@@ -16,33 +12,9 @@ restartPolicyType = "on_failure"
 nixPkgs = ["python310", "gcc"]
 
 [variables]
-# Deployment configs
-DEPLOY_ENV = "production"
+FLASK_APP = "app.py"
+FLASK_ENV = "production"
+HOST = "0.0.0.0"
+PORT = "5001"
 DEBUG = "false"
-TESTING = "false"
-EDITION = "SELF_HOSTED"
-LOG_LEVEL = "INFO"
-API_COMPRESSION_ENABLED = "false"
-
-# Database configs
-POSTGRES_HOST = "${PGHOST}"
-POSTGRES_PORT = "${PGPORT}"
-POSTGRES_USER = "${PGUSER}"
-POSTGRES_PASSWORD = "${PGPASSWORD}"
-POSTGRES_DB = "${PGDATABASE}"
-SQLALCHEMY_DATABASE_URI = "${DATABASE_URL}"
-REDIS_HOST = "${REDISHOST}"
-REDIS_PORT = "${REDISPORT}"
-REDIS_USERNAME = "${REDISUSER}"
-REDIS_PASSWORD = "${REDISPASSWORD}"
-REDIS_DB = "0"
-
-# Web configs
-CONSOLE_API_URL = "${RAILWAY_PUBLIC_DOMAIN}"
-CONSOLE_WEB_URL = "${RAILWAY_PUBLIC_DOMAIN}"
-WEB_API_CORS_ALLOW_ORIGINS = "*"
-
-# Service configs
-HTTP_REQUEST_MAX_READ_TIMEOUT = "60"
-HTTP_REQUEST_MAX_WRITE_TIMEOUT = "30"
-CODE_EXECUTION_ENDPOINT = "http://sandbox:8194/"
+DEPLOY_ENV = "production"
